--- a/battleship/battleship.css
+++ b/battleship/battleship.css
@@ -35,15 +35,80 @@ body {
 }
 
 .gameboard {
-	position: relative;
+	height: 100%;
+	width: 100%%;
+	position: absolute;
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .gridContainer {
-	width: 430px;
+	width: 320px;
 	display: inline-block;
+	float: left;
+	margin: 10px;
+	border: 3px solid darkblue;
 }
 
-.gridContainer h2 {
-	width: 430px;
-	display: inline-block;
+.labels {
+	margin: auto;
 }
+
+.labels h2 {
+	float: left;
+	width: 320px;
+	display: inline-block;
+	text-align: center;
+}
+
+div.cell{
+	width: 30px;
+	height: 30px;
+	background-color: skyblue;
+	border: 1px solid darkblue;
+}
+
+
+[class*='cell-0'] {
+	float:left;
+}
+
+[class*='cell-1'] {
+	float:left;
+}
+
+[class*='cell-2'] {
+	float:left;
+}
+
+[class*='cell-3'] {
+	float:left;
+}
+
+[class*='cell-4'] {
+	float:left;
+}
+
+[class*='cell-5'] {
+	float:left;
+}
+
+[class*='cell-6'] {
+	float:left;
+}
+
+[class*='cell-7'] {
+	float:left;
+}
+
+[class*='cell-8'] {
+	float:left;
+}
+
+[class*='cell-9'] {
+	float:left;
+}
+
+
+
