--- a/battleship/battleship.css
+++ b/battleship/battleship.css
@@ -62,12 +62,14 @@ body {
 	border: 3px solid darkblue;
 }
 
-.cell{
+.cell.empty{
 	width: 30px;
 	height: 30px;
 	background-color: skyblue;
 	border: 1px solid darkblue;
 }
+
+
 
 .x0, .x1, .x2, .x3, .x4, .x5, .x6, .x7, .x8, .x9 {
 	float:left;
