--- a/battleship/battleship.css
+++ b/battleship/battleship.css
@@ -53,6 +53,7 @@ body {
 .board h2 {
 	width: 320px;
 	display: inline-block;
+	margin-bottom: 5px;
 }
 
 .gridContainer {
@@ -69,7 +70,12 @@ body {
 	border: 1px solid darkblue;
 }
 
-
+.cell.hit{
+	width: 30px;
+	height: 30px;
+	background-color: red;
+	border: 1px solid darkblue;
+}
 
 .x0, .x1, .x2, .x3, .x4, .x5, .x6, .x7, .x8, .x9 {
 	float:left;
