--- a/battleship/battleship.css
+++ b/battleship/battleship.css
@@ -1,4 +1,3 @@
-/* CSS declarations go here */
 body {
 	margin: 0;
 }
@@ -128,9 +127,6 @@ body {
 
 .cell {
 	cursor: pointer;
-}
-
-.cell.empty{
 	width: 30px;
 	height: 30px;
 	background-color: skyblue;
@@ -138,10 +134,7 @@ body {
 }
 
 .cell.hit{
-	width: 30px;
-	height: 30px;
 	background-color: red;
-	border: 1px solid darkblue;
 }
 
 .x0, .x1, .x2, .x3, .x4, .x5, .x6, .x7, .x8, .x9 {
@@ -150,5 +143,9 @@ body {
 
 .showSunkShip {
 	visibility: default;
+}
+
+.hidePlacedShip {
+	visibility: hidden;
 }
 
