elminiated cell generation verification tests

--- a/battleship/battleship.css
+++ b/battleship/battleship.css
@@ -137,6 +137,10 @@ body {
 	background-color: red;
 }
 
+.cell:hover{
+	background-color: lightskyblue;
+}
+
 .x0, .x1, .x2, .x3, .x4, .x5, .x6, .x7, .x8, .x9 {
 	float:left;
 }
@@ -148,4 +152,3 @@ body {
 .hidePlacedShip {
 	visibility: hidden;
 }
-
