--- a/battleship/battleship.css
+++ b/battleship/battleship.css
@@ -138,7 +138,7 @@ body {
 }
 
 .cell:hover{
-	background-color: lightskyblue;
+	background-color: lightblue;
 }
 
 .x0, .x1, .x2, .x3, .x4, .x5, .x6, .x7, .x8, .x9 {
