switched control of mouseover color from static CSS to Meteor

--- a/battleship/battleship.css
+++ b/battleship/battleship.css
@@ -137,10 +137,6 @@ body {
 	background-color: red;
 }
 
-.cell:hover{
-	background-color: lightblue;
-}
-
 .x0, .x1, .x2, .x3, .x4, .x5, .x6, .x7, .x8, .x9 {
 	float:left;
 }
@@ -151,4 +147,8 @@ body {
 
 .hidePlacedShip {
 	visibility: hidden;
+}
+
+.mouseHover {
+	background-color: lightblue;
 }
