updated check ship function

--- a/battleship/battleship.css
+++ b/battleship/battleship.css
@@ -149,6 +149,10 @@ body {
 	visibility: hidden;
 }
 
-.mouseHover {
+.mouseenter {
 	background-color: lightblue;
+}
+
+.mouseleave {
+	background-color: skyblue;
 }
