--- a/battleship/battleship.css
+++ b/battleship/battleship.css
@@ -201,8 +201,7 @@ http://www.spritecow.com*/
 }
 
 .hover {
-	/*background-color: lightsteelblue;*/
-	background-color: black;
+	background-color: lightsteelblue;
 }
 
 .ship {
