--- a/battleship/client/css/battleship.css
+++ b/battleship/client/css/battleship.css
@@ -237,3 +237,11 @@ body {
 	width: 38px;
 	height: 167px;
 }
+
+.hit {
+	background-color: red !important;
+}
+
+.miss {
+	background-color: grey !important;
+}
