--- a/battleship/client/css/battleship.css
+++ b/battleship/client/css/battleship.css
@@ -179,60 +179,70 @@ body {
 }
 
 .horizontal-destroyer {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -5px -6px;
 	width: 61px;
 	height: 20px;
 }
 
 .horizontal-submarine {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -5px -36px;
 	width: 98px;
 	height: 23px;
 }
 
 .horizontal-cruiser {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -5px -65px;
 	width: 92px;
 	height: 25px;
 }
 
 .horizontal-battleship {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -5px -97px;
 	width: 139px;
 	height: 27px;
 }
 
 .horizontal-carrier {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -5px -140px;
 	width: 167px;
 	height: 38px;
 }
 
 .vertical-destroyer {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -365px -11px;
 	width: 20px;
 	height: 61px;
 }
 
 .vertical-submarine {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -332px -11px;
 	width: 23px;
 	height: 98px;
 }
 
 .vertical-cruiser {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -301px -11px;
 	width: 25px;
 	height: 92px;
 }
 
 .vertical-battleship {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -267px -11px;
 	width: 27px;
 	height: 139px;
 }
 
 .vertical-carrier {
+	position:absolute;
 	background: url('battleship_sprites.png') no-repeat -213px -11px;
 	width: 38px;
 	height: 167px;
