--- a/battleship/client/css/battleship.css
+++ b/battleship/client/css/battleship.css
@@ -170,9 +170,9 @@ body {
 	background-color: skyblue;
 }
 
-.ship {
+/*.ship {
 	background-color: steelblue;
-}
+}*/
 
 #shipPack{
 	position:absolute;
@@ -249,19 +249,19 @@ body {
 }
 
 .hit {
-	width: 30px;
+	/*width: 30px;
   height: 30px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
-  border-radius: 15px;
+  border-radius: 15px;*/
   background: red;
 }
 
 .miss {
-	width: 30px;
+	/*width: 30px;
   height: 30px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
-  border-radius: 15px;
+  border-radius: 15px;*/
   background: white;
 }
